--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,31 @@
-<h1><%= @placeholder %></h1>
+<section id="user-details" class="container mx-auto py-5">
+    <div
+        class="header-section flex flex-col sm:flex-col md:flex-row items-center justify-between gap-y-5"
+    >
+        <h1 class="text-3xl font-bold">User Details</h1>
+
+        <%= render 'users/back', label: 'Back to Home', location: users_path %>
+    </div>
+    
+    <%= render 'users/user-card', user:@user %>
+
+    <div class="card user-bio border border-gray-300 rounded-md mt-5 p-9">
+        <h4 class="font-semibold text-xl">Bio</h4>
+        <p><%= @user.bio %>
+        </p>
+    </div>
+
+    <div class="recent-post-container mt-5">
+        <% if @user.user_recent_posts.length%>
+            <% @user.user_recent_posts.each do |post| %>
+                <%= render "posts/post-card", post:post %>
+            <% end %>
+        <% else %>
+            <h1 class="font-bold italic"> No Post Available<h1>
+        <% end %>
+    </div>
+
+    <div class="text-center mt-4">
+        <%= link_to 'See all posts', user_posts_path(@user), type: 'button', class:"btn border border-2 border-green-500 bg-white px-4 py-2 rounded-md text-green-500 hover:bg-green-500 hover:text-white" %>
+    </div>
+</section>
