fix back button

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
 >
     <h1 class="text-3xl font-bold">User Post Details</h1>
 
-    <%= render 'users/back', label: 'Back to Posts', location: user_posts_path(@post.author) %>
+    <%= render 'users/back' %>
 </div>
 
     <div class="recent-post-container mt-5">
