--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="users-list-container mt-7 w-full sm:w-full md:w-[80%] lg:w-[80%] mx-auto max-h-[800px] overflow-y-auto px-4">
-        <% if @users.length %>
+        <% if @users.length.positive? %>
             <% @users.each do |user| %>
                 <%= render "users/user-card", user:user %>
             <% end %>
