--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
     >
         <h1 class="text-3xl font-bold">User All Posts</h1>
 
-        <%= render 'users/back', label: 'Back to User Details', location: user_show_path(@user) %>
+        <%= render 'users/back'%>
     </div>
 
     
@@ -15,7 +15,16 @@
         <% if @user.posts.length %>
             <% @user.posts.each do |post| %>
             <div class="post-card border border-gray-300 rounded-md p-5">
-                <%= link_to post.title, user_post_show_path(@user, post), class: "font-semibold text-lg mb-5" %>
+                
+                <div class="flex items-center justify-between mb-3">
+                    <h1 class="text-3xl font-bold text-center sm:text-center md:text-center lg:text-left">
+                        <%= post.title%>
+                    </h1>
+
+                    
+                    <%= link_to 'view details', user_post_show_path(@user, post), class: "bg-green-500 px-4 py-2 rounded-md text-white hover:bg-green-500 hover:text-white" %>
+                </div>
+
                 <p>
                     <%= post.text %>
                 </p>
