--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
     >
         <h1 class="text-3xl font-bold">User Details</h1>
 
-        <%= render 'users/back', label: 'Back to Home', location: users_path %>
+        <%= render 'users/back'%>
     </div>
     
     <%= render 'users/user-card', user:@user %>
@@ -16,7 +16,7 @@
     </div>
 
     <div class="recent-post-container mt-5">
-        <% if @user.user_recent_posts.length%>
+        <% unless @user.user_recent_posts.empty? %>
             <% @user.user_recent_posts.each do |post| %>
                 <%= render "posts/post-card", post:post %>
             <% end %>
@@ -25,7 +25,9 @@
         <% end %>
     </div>
 
-    <div class="text-center mt-4">
-        <%= link_to 'See all posts', user_posts_path(@user), type: 'button', class:"btn border border-2 border-green-500 bg-white px-4 py-2 rounded-md text-green-500 hover:bg-green-500 hover:text-white" %>
-    </div>
+    <% unless @user.posts.empty? %>
+        <div class="text-center mt-4">
+            <%= link_to 'See all posts', user_posts_path(@user), type: 'button', class:"btn border border-2 border-green-500 bg-white px-4 py-2 rounded-md text-green-500 hover:bg-green-500 hover:text-white" %>
+        </div>
+    <% end %>
 </section>
