--- a/app/views/users/_user-card.html.erb
+++ b/app/views/users/_user-card.html.erb
@@ -8,9 +8,11 @@
             </h1>
             <div class="flex items-center justify-between mt-4">
                 <div class="px-5">
-                    <%= link_to 'view details', user_show_path(user), class:"btn pr-2 border border-green-500 px-4 py-2 rounded-md text-green-500 hover:bg-green-500 hover:text-white", type: 'button' %>
+                    <% if current_route_is_root_path? %>
+                        <%= link_to 'view details', user_show_path(user), class:"btn pr-2 border border-green-500 px-4 py-2 rounded-md text-green-500 hover:bg-green-500 hover:text-white", type: 'button' %>
 
-                    <%= link_to 'view posts', user_posts_path(user), class:"btn pl-3 border border-blue-500 px-4 py-2 rounded-md text-blue-500 hover:bg-blue-500 hover:text-white", type: 'button' %>
+                        <%= link_to 'view posts', user_posts_path(user), class:"btn pl-3 border border-blue-500 px-4 py-2 rounded-md text-blue-500 hover:bg-blue-500 hover:text-white", type: 'button' %>
+                    <% end %>
                 </div>
                 <p class="text-center sm:text-center md:text-center lg:text-right">
                     Number of posts: <span class="text-green-600 font-bold"><%= user.posts_counter %> </span>
