update the helper method in post model

--- a/app/views/posts/_post-card.html.erb
+++ b/app/views/posts/_post-card.html.erb
@@ -1,4 +1,4 @@
-<div class="post-card border border-gray-300 rounded-md p-5">
+<div class="post-card border border-gray-300 rounded-md p-5 mb-5 bg-gray-100">
     <h4 class="font-semibold text-lg mb-5"><%= post.title %> </h4>
     <p>
         <%= post.text %>
