--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,1 +1,1 @@
-<p><%= comment.author.name %>: <%= comment.text %></p>
+<p class="py-3"> <span class="font-semibold italic"><%= comment.author.name %>:</span>  <%= comment.text %></p>
