update the comment and likes counter in the post card partial

--- a/app/views/posts/_post-card.html.erb
+++ b/app/views/posts/_post-card.html.erb
@@ -4,5 +4,5 @@
         <%= post.text %>
     </p>
 
-    <p class="text-right text-sm mt-3">Comments: 10 Likes: 4</p>
+    <p class="text-right text-sm mt-3">Comments: <%= post.comments_length %> Likes: <%= post.likes_length %></p>
 </div>
