--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,20 @@
-<section id="user-details" class="container mx-auto py-5">
+<section id="user-details" class="container py-5 mx-auto">
     <div
-        class="header-section flex flex-col sm:flex-col md:flex-row items-center justify-between gap-y-5"
+        class="flex flex-col items-center justify-between header-section sm:flex-col md:flex-row gap-y-5"
     >
         <h1 class="text-3xl font-bold">User All Posts</h1>
 
-        <%= link_to 'Back', user_show_path(@user), class:"btn border border-gray-300 bg-white px-4 py-2 rounded-md text-sm", type: 'button' %>
+        <%= link_to 'Back', user_path(@user), class:"btn border border-gray-300 bg-white px-4 py-2 rounded-md text-sm", type: 'button' %>
     </div>
 
     
 
     <%= render 'users/user-card', user:@user %>
 
-    <div class="recent-post-container mt-5">
+    <div class="mt-5 recent-post-container">
         <% if @user.posts.length %>
             <% @user.posts.each do |post| %>
-                <div class="post-card border border-gray-300 rounded-md p-5 mb-5">
+                <div class="p-5 mb-5 border border-gray-300 rounded-md post-card">
                     
                     <div class="flex items-center justify-between mb-3">
                         <h1 class="text-3xl font-bold text-center sm:text-center md:text-center lg:text-left">
@@ -22,22 +22,22 @@
                         </h1>
 
                         
-                        <%= link_to 'view details', user_post_show_path(@user, post), class: "bg-green-500 px-4 py-2 rounded-md text-white hover:bg-green-500 hover:text-white" %>
+                        <%= link_to 'view details', user_post_path(@user, post), class: "bg-green-500 px-4 py-2 rounded-md text-white hover:bg-green-500 hover:text-white" %>
                     </div>
 
                     <p>
                         <%= post.text %>
                     </p>
 
-                    <p class="text-right text-sm mt-3">Comments: <%= post.comments_length %> Likes: <%= post.likes_length %></p>
+                    <p class="mt-3 text-sm text-right">Comments: <%= post.comments_length %> Likes: <%= post.likes_length %></p>
 
-                    <div class="comment-list mt-5">
-                        <div class="divider flex items-center gap-x-2">
+                    <div class="mt-5 comment-list">
+                        <div class="flex items-center divider gap-x-2">
                             <span class="block w-[10%]">All Comments</span>
                             <span class="block border border-t border-gray-300 w-[80%]"></span>
                         </div>
 
-                        <div class="comment-list-container mt-4 divide-y-2">
+                        <div class="mt-4 divide-y-2 comment-list-container">
                             <% if post.recent_comments.length.positive? %>
                                 <% post.recent_comments.each do |comment| %>
                                     <%= render 'posts/comment', comment:comment %>
