--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,35 @@
-<section id="user-details" class="container mx-auto py-5">
+<section id="user-details" class="container py-5 mx-auto">
     <div
-        class="header-section flex flex-col sm:flex-col md:flex-row items-center justify-between gap-y-5"
+        class="flex flex-col items-center justify-between header-section sm:flex-col md:flex-row gap-y-5"
     >
         <h1 class="text-3xl font-bold">User Details</h1>
 
-        <%= link_to 'Back', users_path, class:"btn border border-gray-300 bg-white px-4 py-2 rounded-md text-sm", type: 'button' %>
+        <div class="flex items-center gap-2">
+            <%= link_to 'Add Post', new_user_post_path(@user), class:"btn border border-green-500 bg-green-500 px-4 py-2 rounded-md text-sm text-white", type: 'button' %>
+            <%= link_to 'Back', users_path, class:"btn border border-gray-300 bg-white px-4 py-2 rounded-md text-sm", type: 'button' %>
+        </div>
     </div>
     
     <%= render 'users/user-card', user:@user %>
 
-    <div class="card user-bio border border-gray-300 rounded-md mt-5 p-9">
-        <h4 class="font-semibold text-xl">Bio</h4>
+    <div class="mt-5 border border-gray-300 rounded-md card user-bio p-9">
+        <h4 class="text-xl font-semibold">Bio</h4>
         <p><%= @user.bio %>
         </p>
     </div>
 
-    <div class="recent-post-container mt-5">
+    <div class="mt-5 recent-post-container">
         <% unless @user.user_recent_posts.empty? %>
             <% @user.user_recent_posts.each do |post| %>
                 <%= render "posts/post-card", post:post %>
             <% end %>
         <% else %>
-            <h1 class="font-bold italic"> No Post Available<h1>
+            <h1 class="italic font-bold"> No Post Available<h1>
         <% end %>
     </div>
 
     <% unless @user.posts.empty? %>
-        <div class="text-center mt-4">
+        <div class="mt-4 text-center">
             <%= link_to 'See all posts', user_posts_path(@user), type: 'button', class:"btn border border-2 border-green-500 bg-white px-4 py-2 rounded-md text-green-500 hover:bg-green-500 hover:text-white" %>
         </div>
     <% end %>
