--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -32,9 +32,10 @@
                     <p class="mt-3 text-sm text-right">Comments: <%= post.comments_length %> Likes: <%= post.likes_length %></p>
 
                     <div class="mt-5 comment-list">
-                        <div class="flex items-center divider gap-x-2">
+                        <div class="flex items-center justify-between divider gap-x-2">
                             <span class="block w-[10%]">All Comments</span>
-                            <span class="block border border-t border-gray-300 w-[80%]"></span>
+                            <span class="block border border-t border-gray-300 w-[70%]"></span>
+                            <%= link_to 'Add Comment', new_user_post_comment_path(@user, post), class: "btn border border-gray-300 bg-white px-4 py-2 rounded-md text-sm", type: 'button' %>
                         </div>
 
                         <div class="mt-4 divide-y-2 comment-list-container">
