--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,7 +22,11 @@
                         </h1>
 
                         
-                        <%= link_to 'view details', user_post_path(@user, post), class: "bg-green-500 px-4 py-2 rounded-md text-white hover:bg-green-500 hover:text-white" %>
+                        <div class="flex items-center gap-x-3">
+                            <%= link_to 'view details', user_post_path(@user, post), class: "bg-green-500 p-4 py-2 rounded-md text-white hover:bg-green-500 hover:text-white" %>
+                            
+                            <%= button_to image_tag( @user.liked_posts.include?(post) ? 'heart-filled.svg' : 'heart.svg', width: '100%'), user_post_likes_path(@user, post), method: :post, class: "w-10 h-10 p-2 rounded-md bg-gray-100 border border-gray-400" %>
+                        </div>
                     </div>
 
                     <p>
