--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,26 @@
-<section id="user-details" class="container mx-auto py-5">
+<section id="user-details" class="container py-5 mx-auto">
     <div
-    class="header-section flex flex-col sm:flex-col md:flex-row items-center justify-between gap-y-5"
+    class="flex flex-col items-center justify-between header-section sm:flex-col md:flex-row gap-y-5"
 >
     <h1 class="text-3xl font-bold">User Post Details</h1>
 
     <%= render 'users/back' %>
 </div>
 
-    <div class="recent-post-container mt-5">
-        <div class="post-card border border-gray-300 rounded-md p-5">
-            <h4 class="font-semibold text-lg mb-5"><%= @post.title %> </h4>
+    <div class="mt-5 recent-post-container">
+        <div class="p-5 border border-gray-300 rounded-md post-card">
+            <h4 class="mb-5 text-lg font-semibold"><%= @post.title %> </h4>
             <p>
                <%= @post.text %>
             </p>
 
-            <p class="text-right text-sm mt-3">Comments: <%= @post.comments_length %> Likes: <%= @post.likes_length %> </p>
+            <p class="mt-3 text-sm text-right">Comments: <%= @post.comments_length %> Likes: <%= @post.likes_length %> </p>
 
-            <div class="comment-list mt-5">
-                <div class="divider flex items-center gap-x-2">
+            <div class="mt-5 comment-list">
+                <div class="flex items-center justify-between divider gap-x-2">
                     <span class="block w-[10%]">All Comments</span>
-                    <span class="block border border-t border-gray-300 w-[80%]"></span>
+                    <span class="block border border-t border-gray-300 w-[70%]"></span>
+                    <%= link_to 'Add Comment', new_user_post_comment_path(@post.author, @post), class: "btn border border-gray-300 bg-white px-4 py-2 rounded-md text-sm", type: 'button' %>
                 </div>
 
                 <div class="comment-list-container">
