--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,12 +4,21 @@
 >
     <h1 class="text-3xl font-bold">User Post Details</h1>
 
-    <%= render 'users/back' %>
+    <%= link_to 'Back', user_posts_path, class:"btn border border-gray-300 bg-white px-4 py-2 rounded-md text-sm", type: 'button' %>
 </div>
 
     <div class="mt-5 recent-post-container">
         <div class="p-5 border border-gray-300 rounded-md post-card">
-            <h4 class="mb-5 text-lg font-semibold"><%= @post.title %> </h4>
+            <div class="flex items-center justify-between mb-3">
+                <h4 class="mb-5 text-lg font-semibold"><%= @post.title %> </h4>
+
+                
+                <div class="flex items-center gap-x-3">
+                    <%= button_to image_tag( @post.author.liked_posts.include?(@post) ? 'heart-filled.svg' : 'heart.svg', width: '100%'), user_post_likes_path(@post.author, @post), method: :post, class: "w-10 h-10 p-2 rounded-md bg-gray-100 border border-gray-400" %>
+                </div>
+            </div>
+
+            
             <p>
                <%= @post.text %>
             </p>
