--- a/app/views/posts/_post-card.html.erb
+++ b/app/views/posts/_post-card.html.erb
@@ -1,8 +1,11 @@
-<div class="post-card border border-gray-300 rounded-md p-5 mb-5 bg-gray-100">
-    <h4 class="font-semibold text-lg mb-5"><%= post.title %> </h4>
+<div class="p-5 mb-5 bg-gray-100 border border-gray-300 rounded-md post-card">
+    <h4 class="mb-5 text-lg font-semibold"><%= post.title %> </h4>
     <p>
         <%= post.text %>
     </p>
 
-    <p class="text-right text-sm mt-3">Comments: <%= post.comments_length %> Likes: <%= post.likes_length %></p>
+    <div class="flex items-center justify-between">
+        <%= link_to 'view details', user_post_path(post.author, post), class: "bg-green-500 p-4 py-2 rounded-md text-white hover:bg-green-500 hover:text-white" %>
+        <p class="mt-3 text-sm text-right">Comments: <%= post.comments_length %> Likes: <%= post.likes_length %></p>
+    </div>
 </div>
