--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,13 @@
-<section id="users-list" class="container mx-auto py-5">
+<section id="users-list" class="container py-5 mx-auto">
     <div
-        class="header-section flex flex-col sm:flex-col md:flex-row items-center justify-between gap-y-5"
-    >
+        class="flex flex-col items-center justify-between header-section sm:flex-col md:flex-row gap-y-5">
         <h1 class="text-3xl font-bold">List of Users</h1>
         <div class="flex items-center gap-x-4">
             <div class="form-group">
                 <input
                     type="text"
                     placeholder="Search user..."
-                    class="border border-gray-200 bg-gray-200 px-4 py-2 rounded-md text-sm"
+                    class="px-4 py-2 text-sm bg-gray-200 border border-gray-200 rounded-md"
                     aria-label="search"
                 />
             </div>
@@ -22,7 +21,7 @@
                 <%= render "users/user-card", user:user %>
             <% end %>
         <% else %>
-            <h1 class="font-bold italic">No Users Available!!</h1>>
+            <h1 class="italic font-bold">No Users Available!!</h1>
         <% end %>
 
     </div>
