--- a/app/views/posts/_post-card.html.erb
+++ b/app/views/posts/_post-card.html.erb
@@ -4,8 +4,14 @@
         <%= post.text %>
     </p>
 
-    <div class="flex items-center justify-between">
-        <%= link_to 'view details', user_post_path(post.author, post), class: "bg-green-500 p-4 py-2 rounded-md text-white hover:bg-green-500 hover:text-white" %>
+    <div class="flex items-center justify-between mt-4">
+        <div class="flex items-center gap-3">
+            <%= link_to 'view details', user_post_path(post.author, post), class: "bg-green-500 p-4 py-2 rounded-md text-white hover:bg-green-500 hover:text-white" %>
+
+            <% if can?(:destroy, post, current_user)%>
+                <%= button_to 'Delete', user_post_path(post.author, post), method: :delete, data: {confirm: 'Are you sure?'}, class: "border border-red-500 p-4 py-2 rounded-md text-red-500 hover:bg-red-500 hover:text-white" %>
+            <% end %>
+        </div>
         <p class="mt-3 text-sm text-right">Comments: <%= post.comments_length %> Likes: <%= post.likes_length %></p>
     </div>
 </div>
