--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,10 @@
         <h1 class="text-3xl font-bold">User Details</h1>
 
         <div class="flex items-center gap-2">
-            <%= link_to 'Add Post', new_user_post_path(@user), class:"btn border border-green-500 bg-green-500 px-4 py-2 rounded-md text-sm text-white", type: 'button' %>
+            <% if current_user.id == @user.id %>
+                <%= link_to 'Add Post', new_user_post_path(@user), class:"btn border border-green-500 bg-green-500 px-4 py-2 rounded-md text-sm text-white", type: 'button' %>
+            <% end %>
+            
             <%= link_to 'Back', users_path, class:"btn border border-gray-300 bg-white px-4 py-2 rounded-md text-sm", type: 'button' %>
         </div>
     </div>
