--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,9 @@
 
                 
                 <div class="flex items-center gap-x-3">
+                <% if can?(:destroy, @post, current_user)%>
+                <%= button_to 'Delete', user_post_path(@post.author, @post), method: :delete, data: {confirm: 'Are you sure?'}, class: "border border-red-500 p-4 py-2 rounded-md text-red-500 hover:bg-red-500 hover:text-white" %>                   
+                <% end %>
                     <%= button_to image_tag( @post.author.liked_posts.include?(@post) ? 'heart-filled.svg' : 'heart.svg', width: '100%'), user_post_likes_path(@post.author, @post), method: :post, class: "w-10 h-10 p-2 rounded-md bg-gray-100 border border-gray-400" %>
                 </div>
             </div>
